user dashboard UI and controller

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9222,4 +9222,10 @@ body.dark-mode .btn-reset:hover {
     background: #4a3e66;
 }
 
-
+.chart-wrapper{
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
